qt/quick/gen_qquickwindow.h

class QAccessibleInterface;
class QColor;
class QEvent;
class QImage;
class QMetaObject;
class QObject;
class QQmlIncubationController;
class QQuickItem;
class QQuickRenderControl;
class QQuickWindow;
typedef QQuickWindow::GraphicsStateInfo QQuickWindow__GraphicsStateInfo;
class QRunnable;
class QSGTexture;
class QSize;
class QWindow;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QImage QImage;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QQmlIncubationController QQmlIncubationController;
typedef struct QQuickItem QQuickItem;
typedef struct QQuickRenderControl QQuickRenderControl;
typedef struct QQuickWindow QQuickWindow;
typedef struct QQuickWindow__GraphicsStateInfo QQuickWindow__GraphicsStateInfo;
typedef struct QRunnable QRunnable;
typedef struct QSGTexture QSGTexture;
typedef struct QSize QSize;
typedef struct QSurfaceFormat QSurfaceFormat;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QTouchEvent QTouchEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWindow QWindow;
bool QQuickWindow_override_virtual_focusInEvent(void* self, intptr_t slot);
bool QQuickWindow_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_focusOutEvent(void* self, QFocusEvent* param1);
bool QQuickWindow_override_virtual_event(void* self, intptr_t slot);
bool QQuickWindow_virtualbase_event(void* self, QEvent* param1);
bool QQuickWindow_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_keyPressEvent(void* self, QKeyEvent* param1);
bool QQuickWindow_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_keyReleaseEvent(void* self, QKeyEvent* param1);
bool QQuickWindow_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_mousePressEvent(void* self, QMouseEvent* param1);
bool QQuickWindow_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* param1);
bool QQuickWindow_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* param1);
bool QQuickWindow_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_mouseMoveEvent(void* self, QMouseEvent* param1);
bool QQuickWindow_override_virtual_wheelEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_wheelEvent(void* self, QWheelEvent* param1);
bool QQuickWindow_override_virtual_tabletEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_tabletEvent(void* self, QTabletEvent* param1);
bool QQuickWindow_override_virtual_surfaceType(void* self, intptr_t slot);
int QQuickWindow_virtualbase_surfaceType(const void* self);
bool QQuickWindow_override_virtual_format(void* self, intptr_t slot);
QSurfaceFormat* QQuickWindow_virtualbase_format(const void* self);
bool QQuickWindow_override_virtual_size(void* self, intptr_t slot);
QSize* QQuickWindow_virtualbase_size(const void* self);
bool QQuickWindow_override_virtual_moveEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_moveEvent(void* self, QMoveEvent* param1);
bool QQuickWindow_override_virtual_touchEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_touchEvent(void* self, QTouchEvent* param1);
bool QQuickWindow_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QQuickWindow_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, long* result);
bool QQuickWindow_override_virtual_eventFilter(void* self, intptr_t slot);
bool QQuickWindow_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QQuickWindow_override_virtual_timerEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QQuickWindow_override_virtual_childEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_childEvent(void* self, QChildEvent* event);
bool QQuickWindow_override_virtual_customEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_customEvent(void* self, QEvent* event);
bool QQuickWindow_override_virtual_connectNotify(void* self, intptr_t slot);
void QQuickWindow_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QQuickWindow_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QQuickWindow_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QQuickWindow_delete(QQuickWindow* self);
void QQuickWindow__GraphicsStateInfo_delete(QQuickWindow__GraphicsStateInfo* self);