qt/quick/gen_qquickwindow.nim

proc fcQQuickWindow_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_focusInEvent".}
proc fQQuickWindow_virtualbase_focusOutEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_focusOutEvent".}
proc fcQQuickWindow_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_focusOutEvent".}
proc fQQuickWindow_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QQuickWindow_virtualbase_event".}
proc fcQQuickWindow_override_virtual_event(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_event".}
proc fQQuickWindow_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_keyPressEvent".}
proc fcQQuickWindow_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_keyPressEvent".}
proc fQQuickWindow_virtualbase_keyReleaseEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_keyReleaseEvent".}
proc fcQQuickWindow_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_keyReleaseEvent".}
proc fQQuickWindow_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_mousePressEvent".}
proc fcQQuickWindow_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_mousePressEvent".}
proc fQQuickWindow_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_mouseReleaseEvent".}
proc fcQQuickWindow_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_mouseReleaseEvent".}
proc fQQuickWindow_virtualbase_mouseDoubleClickEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_mouseDoubleClickEvent".}
proc fcQQuickWindow_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_mouseDoubleClickEvent".}
proc fQQuickWindow_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_mouseMoveEvent".}
proc fcQQuickWindow_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_mouseMoveEvent".}
proc fQQuickWindow_virtualbase_wheelEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_wheelEvent".}
proc fcQQuickWindow_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_wheelEvent".}
proc fQQuickWindow_virtualbase_tabletEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_tabletEvent".}
proc fcQQuickWindow_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_tabletEvent".}
proc fQQuickWindow_virtualbase_surfaceType(self: pointer, ): cint{.importc: "QQuickWindow_virtualbase_surfaceType".}
proc fcQQuickWindow_override_virtual_surfaceType(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_surfaceType".}
proc fQQuickWindow_virtualbase_format(self: pointer, ): pointer{.importc: "QQuickWindow_virtualbase_format".}
proc fcQQuickWindow_override_virtual_format(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_format".}
proc fQQuickWindow_virtualbase_size(self: pointer, ): pointer{.importc: "QQuickWindow_virtualbase_size".}
proc fcQQuickWindow_override_virtual_size(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_size".}
proc fQQuickWindow_virtualbase_moveEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_moveEvent".}
proc fcQQuickWindow_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_moveEvent".}
proc fQQuickWindow_virtualbase_touchEvent(self: pointer, param1: pointer): void{.importc: "QQuickWindow_virtualbase_touchEvent".}
proc fcQQuickWindow_override_virtual_touchEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_touchEvent".}
proc fQQuickWindow_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool{.importc: "QQuickWindow_virtualbase_nativeEvent".}
proc fcQQuickWindow_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_nativeEvent".}
proc fQQuickWindow_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QQuickWindow_virtualbase_eventFilter".}
proc fcQQuickWindow_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_eventFilter".}
proc fQQuickWindow_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QQuickWindow_virtualbase_timerEvent".}
proc fcQQuickWindow_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_timerEvent".}
proc fQQuickWindow_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QQuickWindow_virtualbase_childEvent".}
proc fcQQuickWindow_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_childEvent".}
proc fQQuickWindow_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QQuickWindow_virtualbase_customEvent".}
proc fcQQuickWindow_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_customEvent".}
proc fQQuickWindow_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QQuickWindow_virtualbase_connectNotify".}
proc fcQQuickWindow_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_connectNotify".}
proc fQQuickWindow_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QQuickWindow_virtualbase_disconnectNotify".}
proc fcQQuickWindow_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QQuickWindow_override_virtual_disconnectNotify".}
proc fcQQuickWindow_delete(self: pointer) {.importc: "QQuickWindow_delete".}
proc fcQQuickWindowGraphicsStateInfo_delete(self: pointer) {.importc: "QQuickWindow__GraphicsStateInfo_delete".}


func init*(T: type QQuickWindow, h: ptr cQQuickWindow): QQuickWindow =
  T(h: h)
proc create*(T: type QQuickWindow, ): QQuickWindow =

  QQuickWindow.init(fcQQuickWindow_new())
proc create*(T: type QQuickWindow, renderControl: gen_qquickrendercontrol.QQuickRenderControl): QQuickWindow =

  QQuickWindow.init(fcQQuickWindow_new2(renderControl.h))
proc create2*(T: type QQuickWindow, parent: gen_qwindow.QWindow): QQuickWindow =

  QQuickWindow.init(fcQQuickWindow_new3(parent.h))
proc metaObject*(self: QQuickWindow, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQQuickWindow_metaObject(self.h))

proc metacast*(self: QQuickWindow, param1: cstring): pointer =

  fcQQuickWindow_metacast(self.h, param1)

proc metacall*(self: QQuickWindow, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQQuickWindow_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QQuickWindow, s: cstring): string =

  let v_ms = fcQQuickWindow_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QQuickWindow, s: cstring): string =

  let v_ms = fcQQuickWindow_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc contentItem*(self: QQuickWindow, ): gen_qquickitem.QQuickItem =

  gen_qquickitem.QQuickItem(h: fcQQuickWindow_contentItem(self.h))

proc activeFocusItem*(self: QQuickWindow, ): gen_qquickitem.QQuickItem =

  gen_qquickitem.QQuickItem(h: fcQQuickWindow_activeFocusItem(self.h))

proc focusObject*(self: QQuickWindow, ): gen_qobject.QObject =

  gen_qobject.QObject(h: fcQQuickWindow_focusObject(self.h))

proc mouseGrabberItem*(self: QQuickWindow, ): gen_qquickitem.QQuickItem =

  gen_qquickitem.QQuickItem(h: fcQQuickWindow_mouseGrabberItem(self.h))

proc sendEvent*(self: QQuickWindow, param1: gen_qquickitem.QQuickItem, param2: gen_qcoreevent.QEvent): bool =

  fcQQuickWindow_sendEvent(self.h, param1.h, param2.h)

proc grabWindow*(self: QQuickWindow, ): gen_qimage.QImage =

  gen_qimage.QImage(h: fcQQuickWindow_grabWindow(self.h))

proc setRenderTarget2*(self: QQuickWindow, fboId: cuint, size: gen_qsize.QSize): void =

  fcQQuickWindow_setRenderTarget2(self.h, fboId, size.h)

proc renderTargetId*(self: QQuickWindow, ): cuint =

  fcQQuickWindow_renderTargetId(self.h)

proc renderTargetSize*(self: QQuickWindow, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQQuickWindow_renderTargetSize(self.h))

proc resetOpenGLState*(self: QQuickWindow, ): void =

  fcQQuickWindow_resetOpenGLState(self.h)

proc graphicsStateInfo*(self: QQuickWindow, ): QQuickWindowGraphicsStateInfo =

  QQuickWindowGraphicsStateInfo(h: fcQQuickWindow_graphicsStateInfo(self.h))

proc beginExternalCommands*(self: QQuickWindow, ): void =

  fcQQuickWindow_beginExternalCommands(self.h)

proc endExternalCommands*(self: QQuickWindow, ): void =

  fcQQuickWindow_endExternalCommands(self.h)

proc incubationController*(self: QQuickWindow, ): gen_qqmlincubator.QQmlIncubationController =

  gen_qqmlincubator.QQmlIncubationController(h: fcQQuickWindow_incubationController(self.h))

proc accessibleRoot*(self: QQuickWindow, ): gen_qaccessible.QAccessibleInterface =

  gen_qaccessible.QAccessibleInterface(h: fcQQuickWindow_accessibleRoot(self.h))

proc createTextureFromImage*(self: QQuickWindow, image: gen_qimage.QImage): gen_qsgtexture.QSGTexture =

  gen_qsgtexture.QSGTexture(h: fcQQuickWindow_createTextureFromImage(self.h, image.h))

proc createTextureFromImage2*(self: QQuickWindow, image: gen_qimage.QImage, options: QQuickWindowCreateTextureOption): gen_qsgtexture.QSGTexture =

  gen_qsgtexture.QSGTexture(h: fcQQuickWindow_createTextureFromImage2(self.h, image.h, cint(options)))

proc createTextureFromId*(self: QQuickWindow, id: cuint, size: gen_qsize.QSize): gen_qsgtexture.QSGTexture =

  gen_qsgtexture.QSGTexture(h: fcQQuickWindow_createTextureFromId(self.h, id, size.h))

proc createTextureFromNativeObject*(self: QQuickWindow, typeVal: QQuickWindowNativeObjectType, nativeObjectPtr: pointer, nativeLayout: cint, size: gen_qsize.QSize): gen_qsgtexture.QSGTexture =

  gen_qsgtexture.QSGTexture(h: fcQQuickWindow_createTextureFromNativeObject(self.h, cint(typeVal), nativeObjectPtr, nativeLayout, size.h))

proc setClearBeforeRendering*(self: QQuickWindow, enabled: bool): void =

  fcQQuickWindow_setClearBeforeRendering(self.h, enabled)

proc clearBeforeRendering*(self: QQuickWindow, ): bool =

  fcQQuickWindow_clearBeforeRendering(self.h)

proc setColor*(self: QQuickWindow, color: gen_qcolor.QColor): void =

  fcQQuickWindow_setColor(self.h, color.h)

proc color*(self: QQuickWindow, ): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQQuickWindow_color(self.h))

proc hasDefaultAlphaBuffer*(_: type QQuickWindow, ): bool =

  fcQQuickWindow_hasDefaultAlphaBuffer()

proc setDefaultAlphaBuffer*(_: type QQuickWindow, useAlpha: bool): void =

  fcQQuickWindow_setDefaultAlphaBuffer(useAlpha)

proc setPersistentOpenGLContext*(self: QQuickWindow, persistent: bool): void =

  fcQQuickWindow_setPersistentOpenGLContext(self.h, persistent)

proc isPersistentOpenGLContext*(self: QQuickWindow, ): bool =

  fcQQuickWindow_isPersistentOpenGLContext(self.h)

proc setPersistentSceneGraph*(self: QQuickWindow, persistent: bool): void =

  fcQQuickWindow_setPersistentSceneGraph(self.h, persistent)

proc isPersistentSceneGraph*(self: QQuickWindow, ): bool =

  fcQQuickWindow_isPersistentSceneGraph(self.h)

proc isSceneGraphInitialized*(self: QQuickWindow, ): bool =

  fcQQuickWindow_isSceneGraphInitialized(self.h)

proc scheduleRenderJob*(self: QQuickWindow, job: gen_qrunnable.QRunnable, schedule: QQuickWindowRenderStage): void =
